# GL-Gravity-Engine

./: CMakeLists.txt
include/: Application.h  Camera.h  CelestialEngine.h  Math.h  MathUtils.h  Mesh.h  Physics.h  Shader.h  Vec.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Application.cpp  Camera.cpp  CelestialEngine.cpp  MathUtils.cpp  Mesh.cpp  Physics.cpp  Shader.cpp  Vec.cpp  main.cpp
src/shaders/: planetShader.frag  planetShader.vert
